--- a/NeuroTracker/NeuroTracker.vcxproj.filters
+++ b/NeuroTracker/NeuroTracker.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="Activation\ReLU.h">
       <Filter>Header Files\NeuralNetwork\Activation</Filter>
     </ClInclude>
+    <ClInclude Include="Activation\Softplus.h">
+      <Filter>Header Files\NeuralNetwork\Activation</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
