--- a/NeuroTracker/NeuroTracker.vcxproj
+++ b/NeuroTracker/NeuroTracker.vcxproj
@@ -131,10 +131,13 @@
     <ClCompile Include="NeuroTracker.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Activation\Linear.h" />
     <ClInclude Include="Activation\ReLU.h" />
+    <ClInclude Include="Activation\Softmax.h" />
     <ClInclude Include="Activation\Softplus.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Layer.h" />
+    <ClInclude Include="Layer\Convolutional.h" />
     <ClInclude Include="Layer\FullyConnected.h" />
     <ClInclude Include="NeuralNetwork.h" />
     <ClInclude Include="Optimizer.h" />
